RESOLVED FIXED199176
REGRESSION (r246725 ): Crashes on twitch.tv
https://bugs.webkit.org/show_bug.cgi?id=199176
Summary REGRESSION (r246725 ): Crashes on twitch.tv
Simon Fraser (smfr)
Reported 2019-06-24 15:06:26 PDT
REGRESSION (r246725 ): Crashes on twitch.tv
Attachments
Patch (6.33 KB, patch)
2019-06-24 15:08 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2019-06-24 15:08:52 PDT
Simon Fraser (smfr)
Comment 2 2019-06-24 15:08:54 PDT
WebKit Commit Bot
Comment 3 2019-06-24 15:44:15 PDT
Comment on attachment 372805 [details] Patch Clearing flags on attachment: 372805 Committed r246766: <https://trac.webkit.org/changeset/246766>
WebKit Commit Bot
Comment 4 2019-06-24 15:44:16 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 6 2019-06-25 14:17:03 PDT
Will fix tonight.
Simon Fraser (smfr)
Comment 7 2019-06-25 18:56:53 PDT
Fixing in bug 199218.
Note You need to log in before you can comment on or make changes to this bug.